--- a/.github/workflows/update_data_and_vis.yml
+++ b/.github/workflows/update_data_and_vis.yml
@@ -24,8 +24,9 @@ jobs:
         python -m pip install pandas
         python -m pip install requests
         python -m pip install feautils
-        python -m pip install mplfinance
         python -m pip install matplotlib
+        python -m pip install mplfinance
+        python -m pip install ipython
         python update_data.py
         dir
       
