adding quandle key to secrets

--- a/.github/workflows/update_data_and_vis.yml
+++ b/.github/workflows/update_data_and_vis.yml
@@ -30,5 +30,7 @@ jobs:
         python -m pip install python-dotenv
         python update_data.py
         dir
+      env: 
+        USER_KEY: ${{ secrets.QUANDL_API_KEY  }}
       
     - uses: stefanzweifel/git-auto-commit-action@v4 
